Upgrade to manifest V3
This patch updates from the old, deprecated V2 format to V3. I have
followed the guide at <https://developer.chrome.com/docs/extensions/develop/migrate/manifest>.
Here is a list of changes:

- Manifest version bumped {2 => 3}
- <all_urls> has been replaces with generic host permissions. See <https://stackoverflow.com/a/66867507>.

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-	"manifest_version": 2,
+	"manifest_version": 3,
 	"name": "Uwu web",
 	"version": "0.1.0",
 	"description":"The web is not uwu enough. This extension corrects that.",
-	"permissions": ["<all_urls>"],
+	"host_permissions": ["http://*/*", "https://*/*"],
 	"content_scripts": [
 		{
 			"js": ["content.js"],
-			"matches": ["<all_urls>"],
+			"matches": ["http://*/*", "https://*/*"],
 			"all_frames": true,
 			"run_at": "document_end"
 		}
